src/scss/main.scss
$green: #7ceaa4;
$purple: #3b3d54;
$total: 10;

html,
body {
    height: calc(var(--vh, 1vh) * 100);
    width: 100vw;
    font-size: 5vw;
    margin: 0;
    padding: 0;
    overflow: hidden;
}

* {
    box-sizing: border-box;
}

h1 {
    font-size: 0.75rem;
}

.site-container {
    height: 100%;
}

.flex-container {
    display: flex;
    flex-flow: column;
    align-items: center;
    justify-content: center;
    height: 100%;
}

.excuse-top {
    display: flex;
    align-items: flex-end;
    flex-direction: row;
    font-size: 0.75rem;
    font-family: 'Fira Sans Condensed', sans-serif;
    margin: 0.5rem;
    height: 50%;
}

.excuse-bottom {
    display: flex;
    justify-content: start;
    flex-direction: row;
    font-size: 1.25rem;
    font-family: 'Permanent Marker', cursive;
    text-align: center;
    margin: 0.5rem;
    height: 50%;
}

.generate-button-container {
    display: flex;
    justify-content: start;
    flex-direction: column;
    margin: 0.5rem;
    height: 50%;
}

.generate-button {
    font-size: 0.5rem;
    font-family: 'Fira Sans Condensed', sans-serif;
    color: #FFFFFF;
    background-color: #000000;
    border: 2px #000000 solid;
    border-radius: 5vw;
    padding: 10px 30px;
    font-weight: bold;
    cursor: pointer;
    transition: 0.25s;
}

.generate-button:hover {
    color: #000000;
    background-color: #FFFFFF;
}

.modalposition {
    text-align: center;
}

.modalbutton {
    font-size: 0.25rem;
    font-family: 'Fira Sans Condensed', sans-serif;
    color: #000000;
    background-color: #FFFFFF;
    border: 2px #000000 solid;
    border-radius: 5vw;
    padding: 10px 30px;
    font-weight: bold;
    cursor: pointer;
    transition: 0.25s;
    text-decoration: none;
    display: inline;
    text-align: center;
    margin-left: auto;
    margin-right: auto;
  }

.modalbutton:hover {
    background:black;
    color: white;
}

.overlay {
    position: fixed;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    background: rgba(0, 0, 0, 0.7);
    transition: opacity 0.5s;
    visibility: hidden;
    opacity: 0;
}

.overlay:target {
    visibility: visible;
    opacity: 1;
}

.popup {
    font-size: 00.3em;
    font-family: 'Fira Sans Condensed', sans-serif;
    color: black;
    margin: 70px auto;
    padding: 20px;
    background: #fff;
    border-radius: 5px;
    width: 60%;
    height: 50%;
    position: relative;
    transition: all 0.5s ease-in-out;
    overflow-x: hidden;
    overflow-y: auto;
}

.popup .close {
    position: absolute;
    top: 20px;
    right: 30px;
    transition: all 200ms;
    font-size: 30px;
    font-weight: bold;
    text-decoration: none;
    color: #333;
}

.popup .close:hover {
    color: #06D85F;
}

.popup .content {
    max-height: 30%;
    overflow: auto;
}

@media screen and (max-width: 700px) {
    .popup {
      width: 70%;
      font-size: 00.5em;
    }
}

.wrap{
	perspective-origin: 50% 50%;
}

.svg {
    fill: $green;
	stroke: $green;
	position: absolute;
	bottom: -100vh;
    transform-style: preserve-3d;
    height: 150px;
    width: 150px;
}

@for $i from 1 through $total {
	$scale:random(2) - .4;

	.svg:nth-child(#{$i}){
		left:random(120) * 1% - 20;
		animation: raise#{$i} 6 + random(15) +s linear infinite;
		animation-delay:random(5) - 5 + s;
		transform: scale(.3 * $i - .6) rotate(random(360) + deg);
		z-index: $i - 7;
		filter: blur($i - 6 + px);

	  @keyframes raise#{$i} {
		  to{
			 bottom:150vh;
			 transform: scale(.3 * $i - .6) rotate(random(360) + deg);
			}
		}
	}
}

